--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb://localhost:27017/dev
-JWKS_URI=http://localhost:9999/auth/realms/access/protocol/openid-connect/certs
+MONGODB_URL=mongodb://mongo:27017/access
+JWKS_URI=http://keycloak:8080/auth/realms/access/protocol/openid-connect/certs
 PORT=4000
 NODE_ENV=production
