--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb://mongo:27017/access
+MONGODB_URL=mongodb://mongo:27017/admin
 JWKS_URI=http://keycloak:8080/auth/realms/access/protocol/openid-connect/certs
 PORT=4000
 NODE_ENV=production
